<resources>
    <string name="app_name">iud_digital2</string>
    <string name="listado_de_usuarios">Listado de Usuarios</string>
    <string name="volver_a_inicio">Volver a Inicio</string>
    <string name="gestion_de_usuarios">Gestion de Usuarios</string>
    <string name="nombre">Nombre</string>
    <string name="email">Email</string>
    <string name="registrar_usuario">Registrar Usuario</string>
    <string name="id">ID</string>
    <string name="buscar_usuario_id">Buscar Usuario (ID)</string>
    <string name="actualizar_usuario_id">Actualizar Usuario (ID)</string>
    <string name="eliminar_usuario_id">Eliminar Usuario (ID)</string>
    <string name="ver_los_usuarios">Ver los usuarios</string>
    <string name="id_">ID:</string>
    <string name="nombre_">Nombre</string>
    <string name="email_">Email</string>
    <string name="imagen_del_usuario">Imagen del usuario</string>
</resources>