<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp">

    <ImageView
        android:id="@+id/imageViewUsuario"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/circular_background"
        android:contentDescription="@string/imagen_del_usuario"
        android:scaleType="centerCrop"
        android:src="@drawable/user" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewIdUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id_"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewNombreUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre_"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textViewEmailUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_"
            android:textColor="@color/azul"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>
