<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo3bkg"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/custom_editext"
        app:cardCornerRadius="50dp"
        app:cardElevation="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:shadowColor="#808080"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="3"
                android:text="@string/gestion_de_usuarios"
                android:textColor="@color/design_default_color_on_secondary"
                android:textSize="28sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/edittext_rounded_background"
                android:drawableStart="@drawable/baseline_person_24"
                android:drawablePadding="12dp"
                android:hint="@string/nombre"
                android:padding="16dp"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/edittext_rounded_background"
                android:drawableStart="@drawable/baseline_email_24"
                android:drawablePadding="12dp"
                android:hint="@string/email"
                android:padding="16dp"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/buttonAgregarUsuario"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton.Icon"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/azul"
                android:gravity="center"
                android:text="@string/registrar_usuario"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:cornerRadius="20dp"
                app:icon="@drawable/baseline_add_24"
                app:iconGravity="textStart"
                app:iconPadding="10dp"
                app:iconSize="24dp"
                app:iconTint="@android:color/white" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/custom_editext"
        app:cardCornerRadius="50dp"
        app:cardElevation="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="24dp">

            <EditText
                android:id="@+id/editTextId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/edittext_rounded_background"
                android:drawableStart="@drawable/baseline_badge_24"
                android:drawablePadding="12dp"
                android:hint="@string/id"
                android:padding="16dp"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/buttonBuscarUsuario"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton.Icon"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="12dp"
                android:backgroundTint="@color/azul"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/buscar_usuario_id"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:cornerRadius="16dp"
                app:icon="@drawable/baseline_search_24"
                app:iconGravity="textStart"
                app:iconPadding="10dp"
                app:iconSize="24dp"
                app:iconTint="@android:color/white" />

            <Button
                android:id="@+id/buttonActualizarUsuario"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton.Icon"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="12dp"
                android:backgroundTint="@color/azul"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/actualizar_usuario_id"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:cornerRadius="16dp"
                app:icon="@drawable/baseline_update_24"
                app:iconGravity="textStart"
                app:iconPadding="10dp"
                app:iconSize="24dp"
                app:iconTint="@android:color/white" />

            <Button
                android:id="@+id/buttonEliminarUsuario"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton.Icon"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="12dp"
                android:backgroundTint="@color/azul"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/eliminar_usuario_id"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:cornerRadius="16dp"
                app:icon="@drawable/baseline_delete_24"
                app:iconGravity="textStart"
                app:iconPadding="10dp"
                app:iconSize="24dp"
                app:iconTint="@android:color/white" />

            <Button
                android:id="@+id/buttonVerTodosLosUsuarios"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton.Icon"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="12dp"
                android:backgroundTint="@color/azul"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/ver_los_usuarios"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:cornerRadius="16dp"
                app:icon="@drawable/baseline_people_24"
                app:iconGravity="textStart"
                app:iconPadding="10dp"
                app:iconSize="24dp"
                app:iconTint="@android:color/white" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
